# TerryEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Terry.sln  build.bat  premake5.lua
SanBox/: SanBox.vcxproj  SanBox.vcxproj.filters  imgui.ini
SanBox/src/: Application.cpp  SanBoxApp.cpp
Terry/: Terry.vcxproj  Terry.vcxproj.filters
Terry/src/: Application.cpp  Application.h  Terry.h  trpch.h
Terry/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h
Terry/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Terry/src/Terry/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Terry/src/Terry/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Terry/src/Terry/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Terry/src/Terry/Platform/Windows/: WindowsWindow.cpp
backup/cmake/SanBox/: CMakeLists.txt
backup/cmake/Terry/: CMakeLists.txt
